--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <form action="{{ path_for('contact') }}" method="post">
+    <form action="{{ path_for('login', {id: 1}) }}" method="post">
         <input type="text" name="email">
         <button type="submit">OK</button>
     </form>
