--- a/resources/views/layouts/sidebarLeft.twig
+++ b/resources/views/layouts/sidebarLeft.twig
@@ -2,27 +2,27 @@
     <div class="fixed-sidebar-left sidebar--small" id="sidebar-left">
         <ul class="left-menu">
             <li>
-                <a href="/" class="h-100 pt-md-3">
+                <a href="/" class="h-100 pt-md-3" title="Home page">
                     <i class="fas fa-lg fa-home text-white"></i>
                 </a>
             </li>
             <li>
-                <a href="#" class="js-sidebar-open">
+                <a href="#" class="js-sidebar-open" title="Open Menu">
                     <i class="fas fa-lg fa-bars left-menu-icon"></i>
                 </a>
             </li>
             <li>
-                <a href="#news">
+                <a href="#news" title="News">
                     <i class="fab fa-lg fa-elementor left-menu-icon"></i>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#" title="Friends">
                     <i class="fas fa-fw fa-user-friends left-menu-icon"></i>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#" title="Account Stats">
                     <i class="fas fa-lg fa-chart-line left-menu-icon"></i>
                 </a>
             </li>
