--- a/resources/views/layouts/sidebarRight.twig
+++ b/resources/views/layouts/sidebarRight.twig
@@ -1,4 +1,4 @@
-<div class="fixed-sidebar right d-none">
+<div class="fixed-sidebar right">
     <div class="fixed-sidebar-right sidebar--small" id="sidebar-right">
 
         <div class="mCustomScrollbar" data-mcs-theme="dark">
@@ -88,7 +88,7 @@
 
     </div>
 
-    <div class="fixed-sidebar-right sidebar--large" id="sidebar-right-1">
+    <div class="fixed-sidebar-right sidebar--large d-none" id="sidebar-right-1">
 
         <div class="mCustomScrollbar" data-mcs-theme="dark">
 
