--- a/resources/views/layouts/app.twig
+++ b/resources/views/layouts/app.twig
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/sidebar.css">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{{ title }}</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
