--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -419,6 +419,10 @@
             </div>
         </div>
 
+
+        <!-- TODO: change -->
+
+
         <div class="control-profile more">
             <div class="author-thumb">
                 <img alt="author" src="img/author-page.jpg" class="avatar">
