--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -420,14 +420,11 @@
         </div>
 
 
-        <!-- TODO: change -->
-
-
-        <div class="control-profile more">
+        <div class="author-page author vcard inline-items more">
             <div class="author-thumb">
                 <img alt="author" src="img/author-page.jpg" class="avatar">
                 <span class="icon-status online"></span>
-                <div class="more-dropdown more-with-triangle d-none">
+                <div class="more-dropdown more-with-triangle">
                     <div class="mCustomScrollbar" data-mcs-theme="dark">
                         <div class="ui-block-title ui-block-title-small">
                             <h6 class="title">Your Account</h6>
@@ -437,28 +434,20 @@
                             <li>
                                 <a href="29-YourAccount-AccountSettings.html">
 
-                                    <svg class="olymp-menu-icon">
-                                        <use xlink:href="svg-icons/sprites/icons.svg#olymp-menu-icon"></use>
-                                    </svg>
+                                    <i class="fa fa-2x fa-cog"></i>
 
-                                    <span>Profile Settings</span>
+                                    <span>Profile Settings main</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="36-FavPage-SettingsAndCreatePopup.html">
-                                    <svg class="olymp-star-icon left-menu-icon" data-toggle="tooltip"
-                                         data-placement="right" data-original-title="FAV PAGE">
-                                        <use xlink:href="svg-icons/sprites/icons.svg#olymp-star-icon"></use>
-                                    </svg>
-
+                                    <i class="fa fa-cog"></i>
                                     <span>Create Fav Page</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <svg class="olymp-logout-icon">
-                                        <use xlink:href="svg-icons/sprites/icons.svg#olymp-logout-icon"></use>
-                                    </svg>
+                                <a href="/logout">
+                                    <i class="fa fa-power-off"></i>
 
                                     <span>Log Out</span>
                                 </a>
@@ -505,9 +494,7 @@
                             <input class="form-control" placeholder="" type="text" value="Space Cowboy">
 
                             <button class="bg-purple">
-                                <svg class="olymp-check-icon">
-                                    <use xlink:href="svg-icons/sprites/icons.svg#olymp-check-icon"></use>
-                                </svg>
+                                <svg class="olymp-check-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-check-icon"></use></svg>
                             </button>
                         </form>
 
@@ -541,18 +528,17 @@
 
                 </div>
             </div>
-            <a href="#profilePage" class="profile-info">
-                <div class="d-none d-lg-block float-left">
-                    <div class="profile-title">
-                        James Spiegel
-                    </div>
-                    <div class="profile-subtitle">
-                        SPACE COWBOY
-                    </div>
+            <a href="02-ProfilePage.html" class="author-name fn">
+                <div class="author-title">
+                    James Spiegel bot <svg class="olymp-dropdown-arrow-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-dropdown-arrow-icon"></use></svg>
                 </div>
-                <i class="fas fa-angle-down d-block float-right"></i>
+                <span class="author-subtitle">SPACE COWBOY dfsd</span>
             </a>
         </div>
+
+
+
+
 
     </div>
 
