change few icons

--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -454,37 +454,6 @@
                             </li>
                         </ul>
 
-                        <div class="ui-block-title ui-block-title-small">
-                            <h6 class="title">Chat Settings</h6>
-                        </div>
-
-                        <ul class="chat-settings">
-                            <li>
-                                <a href="#">
-                                    <span class="icon-status online"></span>
-                                    <span>Online</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="icon-status away"></span>
-                                    <span>Away</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="icon-status disconected"></span>
-                                    <span>Disconnected</span>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="#">
-                                    <span class="icon-status status-invisible"></span>
-                                    <span>Invisible</span>
-                                </a>
-                            </li>
-                        </ul>
 
                         <div class="ui-block-title ui-block-title-small">
                             <h6 class="title">Custom Status</h6>
@@ -494,36 +463,10 @@
                             <input class="form-control" placeholder="" type="text" value="Space Cowboy">
 
                             <button class="bg-purple">
-                                <svg class="olymp-check-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-check-icon"></use></svg>
+                                <i class="fa fa-check"></i>
                             </button>
                         </form>
 
-                        <div class="ui-block-title ui-block-title-small">
-                            <h6 class="title">About Olympus</h6>
-                        </div>
-
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    <span>Terms and Conditions</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span>FAQs</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span>Careers</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span>Contact</span>
-                                </a>
-                            </li>
-                        </ul>
                     </div>
 
                 </div>
