--- a/resources/views/layouts/sidebarRight.twig
+++ b/resources/views/layouts/sidebarRight.twig
@@ -1,5 +1,5 @@
 <div class="fixed-sidebar right">
-    <div class="fixed-sidebar-right sidebar--small" id="sidebar-right">
+    <div class="fixed-sidebar-right sidebar--small d-none d-md-block" id="sidebar-right">
 
         <div class="mCustomScrollbar" data-mcs-theme="dark">
             <ul class="chat-users">
@@ -78,12 +78,12 @@
 
         <div class="search-friend inline-items">
             <a href="#" class="js-sidebar-open">
-                <svg class="olymp-menu-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-menu-icon"></use></svg>
+                <i class="fa fa-lg fa-search"></i>
             </a>
         </div>
 
         <a href="34-YourAccount-ChatMessages.html" class="olympus-chat inline-items">
-            <svg class="olymp-chat---messages-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
+            <i class="far fa-lg fa-comments"></i>
         </a>
 
     </div>
@@ -481,10 +481,9 @@
             </a>
         </div>
 
-        <a href="34-YourAccount-ChatMessages.html" class="olympus-chat inline-items">
+        <a href="#" class="olympus-chat inline-items">
 
-            <h6 class="olympus-chat-title">OLYMPUS CHAT</h6>
-            <svg class="olymp-chat---messages-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
+            <i class="fa fa-comments"></i>
         </a>
 
     </div>
