--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -432,7 +432,7 @@
 
                         <ul class="account-settings">
                             <li>
-                                <a href="29-YourAccount-AccountSettings.html">
+                                <a href="/settings">
 
                                     <i class="fa fa-2x fa-cog"></i>
 
