--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -22,12 +22,12 @@
     </form>
     args:<br>
     <pre>
-        {{ users }}
+        {#{{ users }}#}
     </pre>
 
     <h3>dump:</h3><br>
     <pre>
-{{ dump() }}
+{#{{ dump() }}#}
     </pre>
 
 {% endblock %}
