--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -2,24 +2,100 @@
 
 {% block content %}
 
-    <div class="row">
-        <div class="col-12">
-            <div class="top-header mb-2">
-                <div class="top-header-thumb">
-                    <img src="img/top-header1.jpg" alt="nature">
-                </div>
-                <div class="profile-section bg-white p-3">
-                    <div class="row">
+<!-- Top Header-Profile -->
 
+<div class="container">
+    <div class="row">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="ui-block">
+                <div class="top-header">
+                    <div class="top-header-thumb">
+                        <img src="img/top-header1.jpg" alt="nature">
+                    </div>
+                    <div class="profile-section">
+                        <div class="row">
+                            <div class="col-lg-5 col-md-5 ">
+                                <ul class="profile-menu">
+                                    <li>
+                                        <a href="02-ProfilePage.html" class="active">Timeline</a>
+                                    </li>
+                                    <li>
+                                        <a href="05-ProfilePage-About.html">About</a>
+                                    </li>
+                                    <li>
+                                        <a href="06-ProfilePage.html">Friends</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-5 ml-auto col-md-5">
+                                <ul class="profile-menu">
+                                    <li>
+                                        <a href="07-ProfilePage-Photos.html">Photos</a>
+                                    </li>
+                                    <li>
+                                        <a href="09-ProfilePage-Videos.html">Videos</a>
+                                    </li>
+                                    <li>
+                                        <div class="more">
+                                            <svg class="olymp-three-dots-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg>
+                                            <ul class="more-dropdown more-with-triangle">
+                                                <li>
+                                                    <a href="#">Report Profile</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#">Block Profile</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="control-block-button">
+                            <a href="35-YourAccount-FriendsRequests.html" class="btn btn-control bg-blue">
+                                <svg class="olymp-happy-face-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-happy-face-icon"></use></svg>
+                            </a>
+
+                            <a href="#" class="btn btn-control bg-purple">
+                                <svg class="olymp-chat---messages-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
+                            </a>
+
+                            <div class="btn btn-control bg-primary more">
+                                <svg class="olymp-settings-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-settings-icon"></use></svg>
+
+                                <ul class="more-dropdown more-with-triangle triangle-bottom-right">
+                                    <li>
+                                        <a href="#" data-toggle="modal" data-target="#update-header-photo">Update Profile Photo</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" data-toggle="modal" data-target="#update-header-photo">Update Header Photo</a>
+                                    </li>
+                                    <li>
+                                        <a href="{{ path_for('user.settings') }}">Account Settings</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="top-header-author">
+                        <a href="02-ProfilePage.html" class="author-thumb">
+                            <img src="img/author-main1.jpg" alt="author">
+                        </a>
+                        <div class="author-content">
+                            <a href="/" class="h4 author-name">{{user.login}}</a>
+                            <div class="country">San Francisco, CA</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <form action="{{ path_for('user.login', {id: 1}) }}" method="post">
-        <input type="text" name="email">
-        <button type="submit">OK</button>
-    </form>
+</div>
+
+<!-- ... end Top Header-Profile -->
+
+<div class="container">
     args:<br>
     <pre>
         {#{{ users }}#}
@@ -27,7 +103,7 @@
 
     <h3>dump:</h3><br>
     <pre>
-{{ dump() }}
+        {{ dump() }}
     </pre>
-
+</div>
 {% endblock %}
