--- a/resources/views/layouts/app.twig
+++ b/resources/views/layouts/app.twig
@@ -43,9 +43,7 @@
     {% include 'layouts/header.twig' %}
 {% endblock %}
 
-<div class="container">
-    {% block content %}{% endblock %}
-</div>
+{% block content %}{% endblock %}
 
 <!-- JS Scripts -->
 <script src="js/jquery-3.2.1.js"></script>
@@ -83,6 +81,7 @@
 <script src="js/mediaelement-playlist-plugin.min.js"></script>
 
 <script src="js/base-init.js"></script>
+<script src="/js/main.js"></script>
 
 <script src="Bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
