--- a/resources/views/layouts/sidebarLeft.twig
+++ b/resources/views/layouts/sidebarLeft.twig
@@ -206,7 +206,7 @@
                         <div class="author-title">
                             James Spiegel <svg class="olymp-dropdown-arrow-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-dropdown-arrow-icon"></use></svg>
                         </div>
-                        <span class="author-subtitle">SPACE COWBOY</span>
+                        <span class="author-subtitle">{{ user.status }}</span>
                     </a>
                 </div>
             </div>
